// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ng-update breakpoint service adds a removed-service TODO for unsupported non-parameter type usage: test.ts 1`] = `
{
  "0. Before": "
                import {Component} from '@angular/core';
                import {TuiBreakpointService} from '@taiga-ui/core';

                @Component({
                    templateUrl: './test.html',
                })
                export class TestComponent {
                    protected service!: TuiBreakpointService;
                }
            ",
  "1. After": "
                import {Component} from '@angular/core';
                import {TuiBreakpointService} from '@taiga-ui/core';

                @Component({
                    templateUrl: './test.html',
                })
                export class TestComponent {
// TODO: (Taiga UI migration) TuiBreakpointService has been removed. Use TUI_BREAKPOINT (signal token); wrap with toObservable(...) for Observable-based code if needed
                    protected service!: TuiBreakpointService;
                }
            ",
}
`;

exports[`ng-update breakpoint service migrates TuiBreakpointService inject usage to TUI_BREAKPOINT observable wrapper: test.ts 1`] = `
{
  "0. Before": "
                import {AsyncPipe, NgIf} from '@angular/common';
                import {ChangeDetectionStrategy, Component, inject} from '@angular/core';
                import {
                    TuiBreakpointService,
                    TuiButton,
                    type TuiSizeL,
                } from '@taiga-ui/core';
                import {TuiBlockStatus} from '@taiga-ui/layout';
                import {map, type Observable} from 'rxjs';

                @Component({
                    standalone: true,
                    exportAs: 'Example2',
                    imports: [AsyncPipe, NgIf, TuiBlockStatus, TuiButton],
                    templateUrl: './test.html',
                    changeDetection: ChangeDetectionStrategy.OnPush,
                })
                export default class Example {
                    protected readonly breakpointService = inject(TuiBreakpointService);

                    protected size$: Observable<TuiSizeL> = this.breakpointService.pipe(
                        map((key) => (key === 'mobile' ? 'm' : 'l')),
                    );
                }
            ",
  "1. After": "import { toObservable } from "@angular/core/rxjs-interop";

                import {AsyncPipe, NgIf} from '@angular/common';
                import {ChangeDetectionStrategy, Component, inject} from '@angular/core';
                import { TuiButton, type TuiSizeL, TUI_BREAKPOINT } from '@taiga-ui/core';
                import {TuiBlockStatus} from '@taiga-ui/layout';
                import {map, type Observable} from 'rxjs';

                @Component({
                    standalone: true,
                    exportAs: 'Example2',
                    imports: [AsyncPipe, NgIf, TuiBlockStatus, TuiButton],
                    templateUrl: './test.html',
                    changeDetection: ChangeDetectionStrategy.OnPush,
                })
                export default class Example {
                    protected readonly breakpointService = toObservable(inject(TUI_BREAKPOINT));

                    protected size$: Observable<TuiSizeL> = this.breakpointService.pipe(
                        map((key) => (key === 'mobile' ? 'm' : 'l')),
                    );
                }
            ",
}
`;

exports[`ng-update breakpoint service migrates inline inject(TuiBreakpointService).pipe(...) usage: test.ts 1`] = `
{
  "0. Before": "
                import {Component, inject} from '@angular/core';
                import {TuiBreakpointService} from '@taiga-ui/core';
                import {map} from 'rxjs';

                @Component({
                    templateUrl: './test.html',
                })
                export class TestComponent {
                    protected readonly s$ = inject(TuiBreakpointService).pipe(
                        map((breakpoint) => breakpoint === 'mobile'),
                    );
                }
            ",
  "1. After": "import { toObservable } from "@angular/core/rxjs-interop";

                import {Component, inject} from '@angular/core';
                import { TUI_BREAKPOINT } from '@taiga-ui/core';
                import {map} from 'rxjs';

                @Component({
                    templateUrl: './test.html',
                })
                export class TestComponent {
                    protected readonly s$ = toObservable(inject(TUI_BREAKPOINT)).pipe(
                        map((breakpoint) => breakpoint === 'mobile'),
                    );
                }
            ",
}
`;

exports[`ng-update breakpoint service migrates multiple @Inject(TuiBreakpointService) constructor params to fields: test.ts 1`] = `
{
  "0. Before": "
                import {Component, Inject} from '@angular/core';
                import {
                    TuiBreakpointMediaKey,
                    TuiBreakpointService,
                } from '@taiga-ui/core';
                import {type Observable} from 'rxjs';

                @Component({
                    templateUrl: './test.html',
                })
                export class TestComponent {
                    constructor(
                        @Inject(TuiBreakpointService)
                        private readonly breakpoint$: TuiBreakpointService,
                        @Inject(TuiBreakpointService)
                        private readonly media$: Observable<TuiBreakpointMediaKey>,
                    ) {}
                }
            ",
  "1. After": "import { toObservable } from "@angular/core/rxjs-interop";

                import { Component, Inject, inject } from '@angular/core';
                import { TuiBreakpointMediaKey, TUI_BREAKPOINT } from '@taiga-ui/core';
                import {type Observable} from 'rxjs';

                @Component({
                    templateUrl: './test.html',
                })
                export class TestComponent {
    private readonly breakpoint$ = toObservable(inject(TUI_BREAKPOINT));
    private readonly media$ = toObservable(inject(TUI_BREAKPOINT));

                    constructor(
) {}
                }
            ",
}
`;

exports[`ng-update breakpoint service migrates multiple inject(TuiBreakpointService) usages in one file: test.ts 1`] = `
{
  "0. Before": "
                import {Component, inject} from '@angular/core';
                import {TuiBreakpointService} from '@taiga-ui/core';
                import {map} from 'rxjs';

                @Component({
                    templateUrl: './test.html',
                })
                export class TestComponent {
                    protected readonly a$ = inject(TuiBreakpointService).pipe(
                        map((breakpoint) => breakpoint === 'mobile'),
                    );

                    protected readonly b$ = inject(TuiBreakpointService).pipe(
                        map((breakpoint) => breakpoint === 'desktop'),
                    );
                }
            ",
  "1. After": "import { toObservable } from "@angular/core/rxjs-interop";

                import {Component, inject} from '@angular/core';
                import { TUI_BREAKPOINT } from '@taiga-ui/core';
                import {map} from 'rxjs';

                @Component({
                    templateUrl: './test.html',
                })
                export class TestComponent {
                    protected readonly a$ = toObservable(inject(TUI_BREAKPOINT)).pipe(
                        map((breakpoint) => breakpoint === 'mobile'),
                    );

                    protected readonly b$ = toObservable(inject(TUI_BREAKPOINT)).pipe(
                        map((breakpoint) => breakpoint === 'desktop'),
                    );
                }
            ",
}
`;

exports[`ng-update breakpoint service migrates typed constructor parameter to a TUI_BREAKPOINT field: test.ts 1`] = `
{
  "0. Before": "
                import {Component} from '@angular/core';
                import {TuiBreakpointService} from '@taiga-ui/core';

                @Component({
                    templateUrl: './test.html',
                })
                export class TestComponent {
                    constructor(
                        private readonly breakpointService: TuiBreakpointService,
                    ) {}
                }
            ",
  "1. After": "import { toObservable } from "@angular/core/rxjs-interop";

                import { Component, inject } from '@angular/core';
                import { TUI_BREAKPOINT } from '@taiga-ui/core';

                @Component({
                    templateUrl: './test.html',
                })
                export class TestComponent {
    private readonly breakpointService = toObservable(inject(TUI_BREAKPOINT));

                    constructor(
) {}
                }
            ",
}
`;
